name:                vbulletin-reader
version:             0.1.0.0
-- synopsis:            Text based vbulletin reader
description:         Text based vbulletin reader
homepage:            https://ockhamsolutions.de
-- license:             
-- license-file:        LICENSE
author:              marsmining
-- maintainer:          
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable vbulletin-reader
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       containers, base ==4.6.*