name:                vbulletin-reader
version:             0.1.0.0
description:         Text based vbulletin reader
homepage:            https://ockhamsolutions.de
author:              marsmining
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable vbulletin-reader
  main-is:             Main.hs
  build-depends:       http-conduit, containers, base ==4.7.*